修复试验田数据